@@ -120,7 +120,7 @@ public class SelfExtractRun extends SelfExtract {
      * @return unique dir name
      */
     private static String createTempDirectory(String baseDir, String fileStem) {
-        Long nano = new Long(System.nanoTime());
+        Long nano = Long.valueOf(System.nanoTime());
         return baseDir + File.separator + fileStem + nano;
     }
 
@@ -147,6 +147,7 @@ public class SelfExtractRun extends SelfExtract {
         // if so, return it and done
         if (extractDirVar != null && extractDirVar.length() > 0) {
             String retVal = createIfNeeded(extractDirVar.trim());
+            extractDirPredefined = true;
             return retVal;
         } else {
 
@@ -270,8 +271,7 @@ public class SelfExtractRun extends SelfExtract {
         outputReader.start();
 
         // now setup the shutdown hook
-        Runtime.getRuntime().addShutdownHook(new Thread(new ShutdownHook(platformType, extractDirectory, serverName, outputReader, errorReader)));
-
+        Runtime.getRuntime().addShutdownHook(new Thread(new ShutdownHook(platformType, extractDirectory, serverName, extractDirPredefined)));
         // wait on server start process to complete, capture and pass on return code
         rc = proc.waitFor();
 
@@ -298,14 +298,17 @@ public class SelfExtractRun extends SelfExtract {
                 try {
                     String serverName = getServerName();
                     if (shouldRunInJVM(extractDirectory, serverName)) {
+                        // single jvm non-debug path
                         rc = runServerInline(extractDirectory, serverName, args);
                     } else {
+                        // double jvm debug path
                         rc = runServer(extractDirectory, serverName, args);
                     }
                 } catch (Exception e) {
                     throw new RuntimeException("Failed to run jar due to error " + e.getMessage(), e);
                 }
             }
+
             System.exit(rc);
         }
 
@@ -326,6 +329,7 @@ public class SelfExtractRun extends SelfExtract {
     private static int runServerInline(String extractDirectory,
                                        String serverName,
                                        String[] args) throws IOException, ClassNotFoundException, NoSuchMethodException, SecurityException, IllegalAccessException, IllegalArgumentException, InvocationTargetException {
+
         File serverLaunchJar = new File(extractDirectory, "wlp/bin/tools/ws-server.jar");
         JarFile jar = new JarFile(serverLaunchJar);
         String className = jar.getManifest().getMainAttributes().getValue("Main-Class");
@@ -345,7 +349,7 @@ public class SelfExtractRun extends SelfExtract {
         props.setProperty("LOG_DIR",
                           extractDirectory + File.separator + "wlp" + File.separator + "usr" + File.separator + "servers" + File.separator + serverName + File.separator + "logs");
 
-        Class clazz = cl.loadClass(className);
+        Class<?> clazz = cl.loadClass(className);
         List<String> argList = new ArrayList<String>(args.length + 2);
         argList.add(serverName);
         if (args.length > 0) {
@@ -353,6 +357,9 @@ public class SelfExtractRun extends SelfExtract {
             argList.addAll(Arrays.asList(args));
         }
         Method m = clazz.getDeclaredMethod("main", new Class[] { String[].class });
+
+        // Add the shutdown hook to clean up
+        Runtime.getRuntime().addShutdownHook(new Thread(new ShutdownHook(platformType, extractDirectory, serverName, extractDirPredefined)));
 
         attachJavaAgent(extractDirectory);
 
@@ -381,10 +388,11 @@ public class SelfExtractRun extends SelfExtract {
                 URL thisJar = SelfExtractRun.class.getProtectionDomain().getCodeSource().getLocation();
                 try {
                     URL toolsJar = new URL("file:" + f.getCanonicalPath());
+                    @SuppressWarnings("resource")
                     URLClassLoader cl = new URLClassLoader(new URL[] { thisJar, toolsJar }, null);
                     Class<?> clazz = cl.loadClass("wlp.lib.extract.AgentAttach");
                     Method m = clazz.getDeclaredMethod("attach", new Class[] { String.class });
-                    Object result = m.invoke(null, new String[] { javaAgent.getAbsolutePath() });
+                    Object result = m.invoke(null, javaAgent.getAbsolutePath());
                     if (result != null) {
                         err("UNABLE_TO_ATTACH_AGENT", result);
                     }
